--- a/mysite/templates/footer.html
+++ b/mysite/templates/footer.html
@@ -7,7 +7,7 @@
     <hr style="margin: 0;">
 </div>
 
-<nav class="navbar navbar-light mb-0 bg-light" id="nav-footer" style="background-color: white">
+<nav class="navbar navbar-light mb-0 " id="nav-footer" style="background-color: white">
     <div class="row col justify-content-center">
 		<!-- email -->
         <h4 class="mr-3 margin-bottom-zero">
@@ -36,22 +36,12 @@
                 <i class="fab fa-weibo font-size-sm color-lightgray"></i>
             </a>
         </h4>
-		<!-- QQ -->
-        <h4 class="mr-3 margin-bottom-zero">
-            <a href="#" class="no-underline">
-                <i class="fab fa-qq font-size-sm  color-lightgray"></i>
-            </a>
-        </h4>
-        <h4 class=" margin-bottom-zero">
-            <a href="#" class="no-underline" data-toggle="modal" data-target="#QR-footer">
-                <i class="fab fa-weixin font-size-sm color-lightgray"></i>
-            </a>
-        </h4>
+		
     </div>
 
     <div class="row col-12 justify-content-center font-size-xs">
         <div style="text-align: center; color: lightgrey;">
-            <p class="mb-0">Copyright &copy; 2021~2021 guihuaxin</p>
+            <p class="mb-0">Copyright &copy; 2021 guihuaxin</p>
             <p class="mb-0">Powered by</p>
         </div>
     </div>
