--- a/mysite/templates/header.html
+++ b/mysite/templates/header.html
@@ -2,35 +2,24 @@
 {% load notifications_tags %}
 {% notifications_unread as unread_count %}	
 <!-- 定义导航栏 -->
-<nav class="navbar  navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light  ">
 	<div class="container">
 		<!-- 导航栏商标 -->
-		<a class="navbar-brand" href="#">
-			<img src="/static/image/site.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-			GuiHuaXin</a>	
+		<a class="navbar-brand" href="{% url 'learn:home' %}">GuiHuaXin</a>	
 		<!-- 导航入口 -->
 		<div>
 			<ul class="nav navbar-nav ">
 				<!-- 条目 -->
-				<form class="form-inline">
-					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-				</form>
+				
 				<li class="nav-item">
 					<a class="nav-link" href="/admin/">
 						Admin</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'learn:home' %}">
-						<i class="bi bi-house"></i> Home</a>
+					<a class="nav-link" href="{% url 'learn:info' %}">Info</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'learn:info' %}">
-						<i class="bi bi-info-circle"></i> Info</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{% url 'iot:index' %}">
-						<i class="bi bi-slash-square"></i> Iot</a>
+					<a class="nav-link" href="{% url 'iot:index' %}">Iot</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'article:article_list' %}">
@@ -78,7 +67,7 @@
 						<a class="nav-link" href="{% url 'userprofile:login' %}">Login</a>
 					</li> 
 					<li class="nav-item">
-						<a class="btn btn-outline-success" href='{% url "userprofile:register" %}'>Register</a>	
+						<a class="nav-link" href='{% url "userprofile:register" %}'>Register</a>	
 					</li>
 				<!-- if 语句在这里结束 -->
 				{% endif %}
