--- a/mysite/templates/notice/list.html
+++ b/mysite/templates/notice/list.html
@@ -8,10 +8,10 @@
 {% block content %}
 <div class="container">
     <div class="row mt-4 ml-4">
-	{% if notice %}
-        <a href="{% url "notice:update" %}" class="btn btn-warning" role="button">清空所有通知</a>
+	{% if notices %}
+        <a href="{% url "notice:update" %}" class="btn btn-warning list-group-item" role="button">清空所有通知</a>
     {% else %}
-		<p class="list-group-item">暂无消息通知</p>
+		<a href="#" class="list-group-item">暂无消息通知</a>
 	{% endif %}
 	</div>
     <!-- 未读通知列表 -->
