--- a/mysite/templates/header.html
+++ b/mysite/templates/header.html
@@ -16,14 +16,13 @@
 						Admin</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'learn:info' %}">Info</a>
+					<a class="nav-link" href="{% url 'learn:info' %}">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'iot:index' %}">Iot</a>
+					<a class="nav-link" href="{% url 'iot:index' %}">IOT</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="{% url 'article:article_list' %}">
-						<i class="bi bi-book"></i> Article</a>
+					<a class="nav-link" href="{% url 'article:article_list' %}">Article</a>						
 				</li>
 			
 				<!-- Django的 if 模板语句 -->
