--- a/mysite/templates/learn/info.html
+++ b/mysite/templates/learn/info.html
@@ -7,6 +7,7 @@
 <head>
     <!-- 网站采用的字符编码 -->
     <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- 预留网站标题的位置 -->
     <title>Information</title>
     <!-- 引入bootstrap的css文件 -->
