--- a/mysite/templates/back_to_top_func.html
+++ b/mysite/templates/back_to_top_func.html
@@ -27,7 +27,7 @@
         border: 0;
         border-radius: 8%;
         opacity: 0.5;
-        background: black;
+        background: Gray;
         cursor: pointer;
         position: fixed;
         right: 1.5rem;
@@ -40,7 +40,7 @@
         width: 20px;
         height: 3px;
         border-radius: 3px;
-        background: orange;
+        background: SkyBlue;
         position: absolute;
         content: "";
     }
