--- a/mysite/templates/footer.html
+++ b/mysite/templates/footer.html
@@ -9,33 +9,27 @@
 
 <nav class="navbar navbar-light mb-0 " id="nav-footer" style="background-color: white">
     <div class="row col justify-content-center">
-		<!-- email -->
-        <h4 class="mr-3 margin-bottom-zero">
-            <a href="mailto:guihuaxin@foxmail.com" class="no-underline">
+		<!-- Email -->
+        <h3 class="mr-3 margin-bottom-zero">
+            <a href="mailto:guihuaxin@foxmail.com" target="_blank"
+				class="no-underline">
                 <i class="fas fa-envelope font-size-sm color-lightgray"></i>
             </a>
-        </h4>
-		<!-- github -->
-        <h4 class="mr-3 margin-bottom-zero">
-            <a href="https://github.com/guihuaxin" target="_blank"
-				class="no-underline">
-				<i class="fab fa-github font-size-sm color-lightgray"></i>
-            </a>
-        </h4>
+        </h3>
 		<!-- gitee -->
-        <h4 class="mr-3 margin-bottom-zero">
+        <h3 class="mr-3 margin-bottom-zero">
             <a href="https://gitee.com/Tangkz" target="_blank"
 				class="no-underline">
 				<i class="fab fa-git-square"></i>
             </a>
-        </h4>
+        </h3>
 		<!-- weibo -->
-        <h4 class="mr-3 margin-bottom-zero">
+        <h3 class="mr-3 margin-bottom-zero">
             <a href="//weibo.com/u/6418680446" target="_blank"
 				class="no-underline">
                 <i class="fab fa-weibo font-size-sm color-lightgray"></i>
             </a>
-        </h4>
+        </h3>
 		
     </div>
 
