--- a/mysite/templates/footer.html
+++ b/mysite/templates/footer.html
@@ -25,7 +25,7 @@
         </h3>
 		<!-- gitee -->
         <h3 class="mr-3 margin-bottom-zero">
-            <a href="https://gitee.com/Tangkz" target="_blank"
+            <a href="https://gitee.com/guihuaxin" target="_blank"
 				class="no-underline">
 				<i class="fab fa-git-square"></i>
             </a>
